<resources>
    <string name="app_name">EdVenture</string>
    <string name="title_fragment_filter_teachers">Filter teachers</string>
    <string name="title_fragment_discover_teachers">Select a teacher</string>
    <string name="title_fragment_add_teachers">Add new teacher</string>
    <string name="title_cancel_filter">Cancel filter</string>
    <string name="title_activity_edit_tutor">Edit</string>
    <string name="welcome_phrase">Welcome to the EdVenture</string>
    <string name="continue_phrase">Continue</string>
    <string name="search">Search</string>
    <string name="filter">filter</string>
    <string name="choose_teacher">Find your teacher</string>
    <string name="first_name">FIRST NAME</string>
    <string name="change_profile_picture">Change picture</string>
    <string name="place">PLACE</string>
    <string name="hour_rate">HOUR RATE</string>
    <string name="online_class">Online</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="save">Save</string>
    <string name="select_image">Select an image</string>
    <string name="rating">RATING</string>
    <string name="last_name">LAST NAME</string>
    <string name="select_image_source">Select an image source</string>
    <string name="take_picture">Take a picture</string>
    <string name="file_provider_path" translatable="false">com.example.edventure.fileprovider</string>
    <string name="choose_from_gallery">Select from gallery</string>
    <string name="range">Value must be between 0.0 and 5.0!</string>
    <string name="required_field">*Required</string>
    <string name="subject">SUBJECT</string>
    <string name="app_intro_title_1">One-click registration?</string>
    <string name="app_intro_title_2">Online reservation?!</string>
    <string name="app_intro_title_3">Credit card payment?!?!</string>
    <string name="app_intro_text_1">You\'re in the right place!</string>
    <string name="app_intro_text_2">Oh, yeah…</string>
    <string name="app_intro_text_3">Ehh… No more questions? Great! Let\'s get started!</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="max_price">MAX. PRICE</string>
    <string name="min_price">MIN. PRICE</string>
    <string name="profile">Profile</string>
    <string name="message">Delete</string>
    <string name="teachers_profile">Teacher\'s profile</string>
    <string name="number_of_enrolled_students">Number of enrolled\nstudents</string>
    <string name="total_number_of_students">Total number of\nstudents</string>
    <string name="average_lesson_time">Average lesson\ntime</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="not_possible">Not possible</string>
    <string name="student_should_need_loan_for_your_services">Student should need a loan for your services?</string>
    <string name="home">Home</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="calendar">Calendar</string>
    <string name="edit_tutor">Edit Tutor</string>
    <string name="date">Date</string>
    <string name="currency_per_hour">$/hr</string>
    <string name="per_person">per person</string>
    <string name="title_activity_bottom_navigation" translatable="false">MainActivity</string>
    <string name="filter_teachers">Filter teachers</string>
</resources>
