<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_custom_search_primary_24"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/calendar" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>