<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_color_dark_secondary_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/calendar" />
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_color_secondary_dark_24dp"
        android:title="@string/profile" />

</menu>