<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEditTeacherFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/basic_indentation"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/basic_indentation"
                android:layout_marginBottom="@dimen/basic_indentation"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/newProfilePicture"
                        android:layout_width="@dimen/imageSize"
                        android:layout_height="@dimen/imageSize"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/profilePictureIcon"
                        android:layout_width="@dimen/imageSize"
                        android:layout_height="@dimen/imageSize"
                        android:clickable="true"
                        android:contentDescription="@string/profile_picture_description"
                        android:focusable="true"
                        android:src="@drawable/ic_custom_profile_secondary_dark_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tutorChangePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_profile_picture"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
            <!--TODO: FIRST NAME A LAST NAME + Titul před a za jménem na jeden řádek-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/first_name"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/last_name"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_subject_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/subject"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_subject_24">

                <AutoCompleteTextView
                    android:id="@+id/add_subject_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_place_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/place"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_place_24">

                <AutoCompleteTextView
                    android:id="@+id/add_place_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_per_hour_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/hour_rate"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_per_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rating_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/rating"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                app:helperText="@string/range"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_star_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveTeacherButton"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="@color/colorSecondary"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>