<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEditTutorActivity"
    tools:showIn="@layout/activity_add_edit_tutor">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveChanges">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/basic_indentation"
                android:layout_marginBottom="@dimen/basic_indentation"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/newProfilePicture"
                        android:layout_width="@dimen/imageSize"
                        android:layout_height="@dimen/imageSize"
                        android:clickable="true"
                        android:contentDescription="@string/profile_picture_description"
                        android:focusable="true"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/profilePictureIcon"
                        android:layout_width="@dimen/imageSize"
                        android:layout_height="@dimen/imageSize"
                        android:clickable="true"
                        android:contentDescription="@string/profile_picture_description"
                        android:focusable="true"
                        android:src="@drawable/ic_account_circle_color_secondary_dark_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tutorChangePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_profile_picture"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_layout"
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_layout"
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/place_layout"
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/place"
                app:startIconDrawable="@drawable/ic_place_color_secondary_dark_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_per_hour_layout"
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"

                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/hour_rate"
                app:startIconDrawable="@drawable/ic_attach_money_color_secondary_dark_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_per_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stars_layout"
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperTextEnabled="true"
                app:helperText="@string/range"
                app:errorEnabled="true"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:layout_marginBottom="@dimen/half_indentation"
                android:hint="@string/rating"
                app:startIconDrawable="@drawable/ic_star_color_secondary_dark_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveChanges"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="@color/colorSecondary"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:insetTop="0dp"
        android:insetBottom="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>