<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FilterTeacherFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/basic_indentation"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filter_subject_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/subject"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_subject_24">

                <AutoCompleteTextView
                    android:id="@+id/subject_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/flter_place_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/place"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_place_24">

                <AutoCompleteTextView
                    android:id="@+id/place_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rating_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:hint="@string/rating"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                app:helperText="@string/range"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_star_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rating_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_indentation"
                android:layout_marginEnd="@dimen/half_indentation"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/half_indentation"
                    android:layout_marginEnd="@dimen/half_indentation"
                    android:layout_weight="1"
                    android:hint="@string/min_price"
                    app:boxBackgroundColor="@color/white"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_outline_monetization_on_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price_min_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/half_indentation"
                    android:layout_marginEnd="@dimen/half_indentation"
                    android:layout_weight="1"
                    android:hint="@string/max_price"
                    app:boxBackgroundColor="@color/white"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_monetization_on_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price_max_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveFilter"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="0dp"
        android:backgroundTint="@color/colorSecondary"
        android:enabled="false"
        android:text="@string/save"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:insetTop="0dp"
        android:insetBottom="0dp"/>


    <!-- TODO: Implementovat CustomView
    <com.example.edventure.view.ClassInfoView
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/saveFilter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:subject="Bobek"
         app:place="Testovaci"
         app:date="27.5.2020"
         app:time="17.00"
         app:online="true"
         app:capacity="0/10"
         app:price="500"
         />


         /> -->


</androidx.constraintlayout.widget.ConstraintLayout>